@@ -641,6 +641,7 @@ wxOSX:
 
 - Fix incorrect joystick detection in configure (Lauri Nurmi).
 - Fix crash in wxDataViewCtrl when cancelling choice selection (hartwigw).
+- Implement support for wxGA_VERTICAL in wxGauge (themindiswatching).
 - Add support for wxEVT_COMBOBOX_DROPDOWN and wxEVT_COMBOBOX_CLOSEUP
   events to wxOSX/Cocoa (Igor Korot).
 
